[package]
name = "f1-23-telemetry"
version = "0.1.0"
edition = "2021"
license = "MIT"
categories = ["game-development", "embedded", "networking"]
keywords = [
    "f1",
    "formula-1",
    "telemetry",
    "udp",
    "packet",
    "packet-encoding",
    "packet-decoding",
    "packet-serialization",
    "packet-deserialization",
]
description = "A library for encoding and decoding F1 2023 telemetry packets."
readme = "README.md"
repository = "https://github.com/jeiang/f1-23-telemetry"

[dependencies]
