[package]
name = "f1-23-pitwall"
version = "0.1.0"
edition = "2021"
license = "MIT"
categories = ["game-development", "embedded"]
keywords = [
    "f1",
    "formula-1",
    "telemetry",
    "udp",
    "packet"
]
description = "A library for encoding and decoding F1 2023 telemetry packets."
readme = "README.md"
repository = "https://github.com/jeiang/f1-23-telemetry"

[dependencies]
color-eyre = "0.6"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
paste = "1.0"
thiserror = "1.0"
num-traits = "0.2"
num-derive = "0.4"

[profile.dev.package.backtrace]
opt-level = 3